--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,11 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>6.1.6</version>
+	</dependency>
+  </dependencies>
 </project>
